Fix 'adminmenuback' z-index

--- a/plugins/woocommerce-admin/client/products/product-page.scss
+++ b/plugins/woocommerce-admin/client/products/product-page.scss
@@ -64,3 +64,7 @@ html.interface-interface-skeleton__html-container {
 div#wpwrap {
 	background-color: $white;
 }
+
+div#adminmenuback {
+	z-index: 101;
+}
